# blockwise-ilastik-multicut

./: .gitignore  AGENTS.md  README.md  environment.yml  fit_classifier.py  ilp_mc_block.py  ilp_reader.py  multicut_from_ilp.ipynb  multicut_from_ilp.py  pyproject.toml  run_demo.py
.github/workflows/: ci.yml
libs/elf@b58e4c83/elf/segmentation/: blockwise_mc_impl.py  watershed.py
libs/ilastik@9cc2254e/docs/ilastik/: dependencies.rst
tests/: make_test_ilp.py  test_multicut.ilp  test_real_ilp.py  test_zarr_web.py
